[FEAT] 搬移 dev branch 樣式檔至 master branch

--- a/source/css/_global/index.styl
+++ b/source/css/_global/index.styl
@@ -32,6 +32,7 @@
   --toc-link-color: $toc-link-color
   --card-box-shadow: 0 3px 8px 6px rgba(7, 17, 27, .05)
   --card-hover-box-shadow: 0 3px 8px 6px rgba(7, 17, 27, .09)
+  --post-strong-tag-color: #ff3877
   --pseudo-hover: $pseudo-hover
   --headline-presudo: #a0a0a0
   --scrollbar-color: $scrollbar-color
@@ -46,6 +47,7 @@ body
   background: var(--global-bg)
   color: var(--font-color)
   font-size: var(--global-font-size)
+  letter-spacing: $letter-spacing
   font-family: $font-family
   line-height: $text-line-height
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0)
