--- a/source/css/_highlight/highlight.styl
+++ b/source/css/_highlight/highlight.styl
@@ -15,14 +15,14 @@ wordWrap = $highlight_enable && !$highlight_line_number && hexo-config('code_blo
   --hlexpand-bg: linear-gradient(180deg, rgba($highlight-background, .6), rgba($highlight-background, .9))
 
 [data-theme='dark']
-  --hl-color: alpha(#FFFFFF, .7)
-  --hl-bg: lighten(#121212, 2)
-  --hltools-bg: lighten(#121212, 3)
+  --hl-color: alpha(#FFFFFF, .9)
+  --hl-bg: lighten(#222222A8, 2)
+  --hltools-bg: lighten(#222222A8, 3)
   --hltools-color: #90a4ae
-  --hlnumber-bg: lighten(#121212, 2)
+  --hlnumber-bg: lighten(#222222A8, 2)
   --hlnumber-color: alpha(#FFFFFF, .4)
-  --hlscrollbar-bg: lighten(#121212, 5)
-  --hlexpand-bg: linear-gradient(180deg, rgba(lighten(#121212, 2), .6), rgba(lighten(#121212, 2), .9))
+  --hlscrollbar-bg: lighten(#222222A8, 5)
+  --hlexpand-bg: linear-gradient(180deg, rgba(lighten(#222222A8, 2), .6), rgba(lighten(#222222A8, 2), .9))
 
 if $highlight_enable
   @require 'highlight/index'
