--- a/source/css/_layout/post.styl
+++ b/source/css/_layout/post.styl
@@ -92,6 +92,10 @@ beautify()
   p
     margin: 0 0 16px
 
+  strong
+    color: var(--post-strong-tag-color)
+    font-weight: normal
+
   iframe
     margin: 0 0 20px
 
@@ -169,7 +173,7 @@ beautify()
 
       &__tags
         display: inline-block
-        margin: 8px 8px 8px 0
+        margin: 1.2rem .4rem 1.2rem 0
         padding: 0 12px
         width: fit-content
         border: 1px solid $light-blue
