--- a/source/css/_tags/tabs.styl
+++ b/source/css/_tags/tabs.styl
@@ -62,6 +62,7 @@
       padding: 0 16px 10px 0
       width: 100%
       text-align: right
+      display: none
 
       button
         color: $tab-to-top-color
