--- a/layout/includes/pagination.pug
+++ b/layout/includes/pagination.pug
@@ -9,23 +9,24 @@
 if is_post()
   - let prev = theme.post_pagination === 1 ? page.prev : page.next
   - let next = theme.post_pagination === 1 ? page.next : page.prev
+  - let pagination_cover = url_for(theme.pagination_cover)
   nav#pagination.pagination-post
     if(prev)
       - var hasPageNext = next ? 'pull-left' : 'pull-full'
       a.prev-post(class=hasPageNext href=url_for(prev.path) title=prev.title)
         if prev.cover_type === 'img'
-          img.cover(src=url_for(prev.cover) onerror=`onerror=null;src='${url_for(theme.error_img.post_page)}'` alt='cover of previous post')
+          img.cover(src=`${pagination_cover}` alt='cover of previous post')
         else
           .cover(style=`background: ${prev.cover || 'var(--default-bg-color)'}`)
         .pagination-info
           .label=_p('pagination.prev')
           .prev_info=prev.title
-          
+
     if(next)
       - var hasPagePrev = prev ? 'pull-right' : 'pull-full'
       a.next-post(class=hasPagePrev href=url_for(next.path) title=next.title)
         if next.cover_type === 'img'
-          img.cover(src=url_for(next.cover) onerror=`onerror=null;src='${url_for(theme.error_img.post_page)}'` alt='cover of next post')
+          img.cover(src=`${pagination_cover}` alt='cover of next post')
         else
           .cover(style=`background: ${next.cover || 'var(--default-bg-color)'}`)
         .pagination-info
