--- a/source/css/_highlight/prismjs/diff.styl
+++ b/source/css/_highlight/prismjs/diff.styl
@@ -1,8 +1,10 @@
 if $highlight_theme == 'light'
   // prism-base16-ateliersulphurpool.light
   pre[class*='language-']
-    .token.function
-      color: #ffb62c
+    .token.function,
+    .token.generics,
+    .token.property
+      color: #66D9EF
 
     .token.comment,
     .token.prolog,
@@ -11,52 +13,49 @@ if $highlight_theme == 'light'
       color: rgba(149, 165, 166, .8)
 
     .token.punctuation
-      color: #5e6687
+      color: #F92672
 
     .token.namespace
       opacity: .7
 
-    .token.operator,
     .token.boolean,
     .token.number
-      color: #c76b29
+      color: #AE81FF
 
-    .token.property
-      color: #c08b30
-
+    .token.operator,
     .token.tag
-      color: #3d8fd1
+      color: #F92672
 
     .token.string
-      color: #22a2c9
+      color: #E6DB74
 
     .token.selector
       color: #6679cc
 
     .token.attr-name
-      color: #c76b29
+      color: #A6E22E
 
     .token.entity,
     .token.url,
     .language-css .token.string,
     .style .token.string
-      color: #22a2c9
+      color: #E6DB74
 
     .token.attr-value,
     .token.keyword,
     .token.control,
     .token.directive,
     .token.unit
-      color: #ac9739
+      color: #F92672
 
     .token.statement,
     .token.regex,
     .token.atrule
-      color: #22a2c9
+      color: #E6DB74
 
     .token.placeholder,
     .token.variable
-      color: #3d8fd1
+      color: #FD971F
 
     .token.deleted
       text-decoration: line-through
@@ -72,6 +71,7 @@ if $highlight_theme == 'light'
     .token.bold
       font-weight: bold
 
+    .token.parameter,
     .token.important
       color: #c94922
 
@@ -97,24 +97,24 @@ if $highlight_theme == 'darker'
     .namespace
       opacity: .7
 
-    .token.property,
     .token.keyword,
     .token.tag
-      color: #96CBFE
-
-    .token.class-name
-      color: #FFFFB6
-
-    .token.boolean,
-    .token.constant
-      color: #99CC99
-
-    .token.symbol,
-    .token.deleted
       color: #f92672
 
+    .token.property,
+    .token.constant
+      color: #F8F8F2
+
+    .token.deleted,
+    .token.namespace,
+    .token.operator,
+    .token.property,
+    .token.symbol
+      color: #f92672
+
+    .token.boolean,
     .token.number
-      color: #FF73FD
+      color: #AE81FF
 
     .token.selector,
     .token.attr-name,
@@ -122,20 +122,15 @@ if $highlight_theme == 'darker'
     .token.char,
     .token.builtin,
     .token.inserted
-      color: #A8FF60
+      color: #E6DB74
 
     .token.variable
-      color: #C6C5FE
-
     .token.operator
       color: #EDEDED
 
     .token.entity
       color: #FFFFB6
       cursor: help
-
-    .token.url
-      color: #96CBFE
 
     .language-css .token.string,
     .style .token.string
@@ -146,11 +141,17 @@ if $highlight_theme == 'darker'
       color: #F9EE98
 
     .token.function
-      color: #DAD085
+      color: #A6E22E
+
+    .token.property,
+    .token.class-name
+    .token.url
+      color: #66D9EF
 
     .token.regex
       color: #E9C062
 
+    .token.parameter,
     .token.important
       color: #fd971f
 
