--- a/source/css/_mode/darkmode.styl
+++ b/source/css/_mode/darkmode.styl
@@ -1,37 +1,38 @@
 if hexo-config('darkmode.enable') || hexo-config('display_mode') == 'dark'
   [data-theme='dark']
-    --global-bg: darken(#121212, 2)
-    --font-color: alpha(#FFFFFF, .7)
+    --global-bg: darken(#100f0f, 2)
+    --font-color: alpha(#FFFFFF, .9)
     --hr-border: alpha(#FFFFFF, .4)
-    --hr-before-color: alpha(#FFFFFF, .7)
-    --search-bg: #121212
-    --search-input-color: alpha(#FFFFFF, .7)
-    --search-a-color: alpha(#FFFFFF, .7)
-    --preloader-bg: darken(#121212, 2)
-    --preloader-color: alpha(#FFFFFF, .7)
+    --hr-before-color: alpha(#FFFFFF, .9)
+    --search-bg: #161616
+    --search-input-color: alpha(#FFFFFF, .9)
+    --search-a-color: alpha(#FFFFFF, .9)
+    --preloader-bg: darken(#161616, 2)
+    --preloader-color: alpha(#FFFFFF, .9)
     --tab-border-color: #2c2c2c
     --tab-botton-bg: #2c2c2c
-    --tab-botton-color: alpha(#FFFFFF, .7)
-    --tab-button-hover-bg: lighten(#121212, 15)
-    --tab-button-active-bg: #121212
-    --card-bg: #121212
-    --sidebar-bg: #121212
-    --sidebar-menu-bg: lighten(#121212, 5)
-    --btn-hover-color: lighten(#121212, 40)
-    --btn-color: alpha(#FFFFFF, .7)
-    --btn-bg: lighten(#121212, 5)
-    --text-bg-hover: lighten(#121212, 15)
-    --light-grey: alpha(#FFFFFF, .7)
+    --tab-botton-color: alpha(#FFFFFF, .9)
+    --tab-button-hover-bg: lighten(#161616, 15)
+    --tab-button-active-bg: #161616
+    --card-bg: #161616
+    --sidebar-bg: #161616
+    --sidebar-menu-bg: lighten(#161616, 5)
+    --btn-hover-color: lighten(#161616, 40)
+    --btn-color: alpha(#FFFFFF, .9)
+    --btn-bg: lighten(#161616, 5)
+    --text-bg-hover: lighten(#161616, 15)
+    --light-grey: alpha(#FFFFFF, .9)
     --dark-grey: alpha(#FFFFFF, .2)
     --white: alpha(#FFFFFF, .9)
-    --text-highlight-color: alpha(#FFFFFF, .9)
-    --blockquote-color: alpha(#FFFFFF, .7)
-    --blockquote-bg: lighten(#121212, 10)
-    --reward-pop: lighten(#121212, 10)
+    --text-highlight-color: alpha(#FFFFFF, 1)
+    --blockquote-color: alpha(#FFFFFF, .9)
+    --blockquote-bg: lighten(#161616, 10)
+    --reward-pop: lighten(#161616, 10)
     --toc-link-color: alpha(#FFFFFF, .6)
-    --scrollbar-color: lighten(#121212, 25)
-    --timeline-bg: lighten(#121212, 5)
-    --zoom-bg: #121212
+    --post-strong-tag-color: #ff3877cc
+    --scrollbar-color: lighten(#161616, 25)
+    --timeline-bg: lighten(#161616, 5)
+    --zoom-bg: #161616
     --mark-bg: alpha($dark-black, .6)
 
     #web_bg:before
@@ -46,7 +47,7 @@ if hexo-config('darkmode.enable') || hexo-config('display_mode') == 'dark'
         background: #2c2c2c
 
       pre > code
-        background: lighten(#121212, 2)
+        background: lighten(#222222A8, 2)
 
       figure.highlight
         box-shadow: none
@@ -67,7 +68,7 @@ if hexo-config('darkmode.enable') || hexo-config('display_mode') == 'dark'
     #page-header
       &.nav-fixed > #nav,
       &.not-top-img > #nav
-        background: alpha(#121212, .8)
+        background: alpha(#161616, .8)
         box-shadow: 0 5px 6px -5px rgba(133, 133, 133, 0)
 
     #post-comment
@@ -79,9 +80,9 @@ if hexo-config('darkmode.enable') || hexo-config('display_mode') == 'dark'
           filter: brightness(.8)
 
     // note
-    if hexo-config('note.style') == 'modern' || hexo-config('note.style') == 'flat'
-      .note
-        filter: brightness(.8)
+    // if hexo-config('note.style') == 'modern' || hexo-config('note.style') == 'flat'
+    //   .note
+    //     filter: brightness(.8)
 
     // hide-tags
     .hide-button,
@@ -117,30 +118,30 @@ if hexo-config('darkmode.enable') || hexo-config('display_mode') == 'dark'
         &:focus,
         .dsqjs-tab-active,
         .dsqjs-no-comment
-          color: alpha(#FFFFFF, .7)
+          color: alpha(#FFFFFF, .9)
 
         .dsqjs-order-label
-          background-color: lighten(#121212, 5)
+          background-color: lighten(#161616, 5)
 
         .dsqjs-post-body
-          color: alpha(#FFFFFF, .7)
+          color: alpha(#FFFFFF, .9)
 
           code,
           pre
             background: #2c2c2c
 
           blockquote
-            color: alpha(#FFFFFF, .7)
+            color: alpha(#FFFFFF, .9)
 
     #artitalk_main #lazy
-      background: #121212
+      background: #161616
 
     #operare_artitalk .c2
-      background: #121212
+      background: #161616
 
     #card-toc
       +maxWidth900()
-        background: lighten(#121212, 5)
+        background: lighten(#161616, 5)
 
     // artalk
     .artalk.atk-dark-mode,
@@ -148,7 +149,7 @@ if hexo-config('darkmode.enable') || hexo-config('display_mode') == 'dark'
       --at-color-font: alpha(#FFFFFF, .7)
       --at-color-meta: alpha(#FFFFFF, .7)
       --at-color-grey: alpha(#FFFFFF, .7)
-    
+
     .atk-send-btn,
     .atk-badge
       color: alpha(#FFFFFF, .7) !important
