--- a/layout/includes/head.pug
+++ b/layout/includes/head.pug
@@ -6,7 +6,8 @@
 - else pageTitle = page.title || config.title || ''
 
 - var isSubtitle = config.subtitle ? ' - ' + config.subtitle : ''
-- var tabTitle = is_home() || !pageTitle ? config.title + isSubtitle : pageTitle
+- var title = config.title + isSubtitle
+- var tabTitle = is_home() || !pageTitle ? title : pageTitle + '|' + title
 - var pageAuthor = config.email ? config.author + ',' + config.email : config.author
 - var pageCopyright = config.copyright || config.author
 - var themeColorLight = theme.theme_color && theme.theme_color.enable && theme.theme_color.meta_theme_color_light || '#ffffff'
